Improve ALB security groups

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -847,6 +847,7 @@ Resources:
         VpcPublicSubnet2Id: !GetAtt SharedVpcStack.Outputs.PublicSubnet2Id
         VpcPublicSubnet3Id: !GetAtt SharedVpcStack.Outputs.PublicSubnet3Id
         EcsClusterName: !GetAtt SharedEcsClusterStack.Outputs.EcsClusterName
+        AlbTargetInstanceSecurityGroupId: !GetAtt SharedAlbStack.Outputs.TargetInstanceSecurityGroupId
       Tags:
         - Key: prx:cloudformation:stack-name
           Value: !Ref AWS::StackName
