Add missing port

--- a/stacks/shared-alb.yml
+++ b/stacks/shared-alb.yml
@@ -125,12 +125,13 @@ Resources:
       GroupId: !GetAtt TargetInstanceSecurityGroup.GroupId
       IpProtocol: tcp
       SourceSecurityGroupId: !GetAtt ListenerTrafficSecurityGroup.GroupId
+      ToPort: 80
 
   ListenerTrafficSecurityGroup:
     Type: AWS::EC2::SecurityGroup
     Properties:
       GroupDescription: !Sub >-
-        Allows inbound traffic on the HTTP and HTTPs load balancer listener
+        Allows inbound traffic on the HTTP and HTTPS load balancer listener
         ports from all IPs, and outbound traffic to the HTTP port destined for
         the ALB target instance security group, for the ${EnvironmentType}
         shared ALB
