Add network interface to launch template

--- a/stacks/shared-ecs-asg.yml
+++ b/stacks/shared-ecs-asg.yml
@@ -183,6 +183,10 @@ Resources:
         KeyName: !Ref KeyPairName
         Monitoring:
           Enabled: false # Specifies whether detailed monitoring is enabled
+        NetworkInterfaces:
+          AssociatePublicIpAddress: true
+          DeleteOnTermination: true
+          Ipv6AddressCount: 1
         SecurityGroupIds:
           - !Ref OutboundTrafficSecurityGroup
           # - !Ref InboundNtpTrafficSecurityGroup
