--- a/stacks/shared-ecs-asg.yml
+++ b/stacks/shared-ecs-asg.yml
@@ -184,9 +184,9 @@ Resources:
         Monitoring:
           Enabled: false # Specifies whether detailed monitoring is enabled
         NetworkInterfaces:
-          AssociatePublicIpAddress: true
-          DeleteOnTermination: true
-          Ipv6AddressCount: 1
+          - AssociatePublicIpAddress: true
+            DeleteOnTermination: true
+            Ipv6AddressCount: 1
         SecurityGroupIds:
           - !Ref OutboundTrafficSecurityGroup
           # - !Ref InboundNtpTrafficSecurityGroup
