Fix network interface

--- a/stacks/shared-ecs-asg.yml
+++ b/stacks/shared-ecs-asg.yml
@@ -186,12 +186,13 @@ Resources:
         NetworkInterfaces:
           - AssociatePublicIpAddress: true
             DeleteOnTermination: true
+            DeviceIndex: 0
+            Groups:
+              - !Ref OutboundTrafficSecurityGroup
+              # - !Ref InboundNtpTrafficSecurityGroup
+              - !Ref InboundSshTrafficSecurityGroup
+              - !Ref AlbTargetInstanceSecurityGroupId
             Ipv6AddressCount: 1
-        SecurityGroupIds:
-          - !Ref OutboundTrafficSecurityGroup
-          # - !Ref InboundNtpTrafficSecurityGroup
-          - !Ref InboundSshTrafficSecurityGroup
-          - !Ref AlbTargetInstanceSecurityGroupId
         # TagSpecifications:
         UserData:
           # User data runs commands on EC2 instances when they are launched. To
