--- a/stacks/vpc/public-network-acl.yml
+++ b/stacks/vpc/public-network-acl.yml
@@ -166,6 +166,33 @@ Resources:
       RuleAction: allow
       RuleNumber: 161
 
+  # INGRESS 170
+  # Allows inbound SSH traffic from all IPs
+  InboundIpV4SshNetworkAclEntry:
+    Type: AWS::EC2::NetworkAclEntry
+    Properties:
+      CidrBlock: 0.0.0.0/0
+      Egress: false
+      NetworkAclId: !Ref PublicNetworkAcl
+      PortRange:
+        From: 22
+        To: 22
+      Protocol: 6 # TPC
+      RuleAction: allow
+      RuleNumber: 170
+  InboundIpV6SshNetworkAclEntry:
+    Type: AWS::EC2::NetworkAclEntry
+    Properties:
+      Egress: false
+      Ipv6CidrBlock: ::/0
+      NetworkAclId: !Ref PublicNetworkAcl
+      PortRange:
+        From: 22
+        To: 22
+      Protocol: 6 # TCP
+      RuleAction: allow
+      RuleNumber: 171
+
   # EGRESS 120
   # Allows outbound traffic on high-numbered ports to all IPs. This generally
   # is for HTTP(S) return traffic to clients on ephemeral ports. Some of the
@@ -306,6 +333,33 @@ Resources:
       Protocol: 17 # UDP
       RuleAction: allow
       RuleNumber: 161
+
+  # EGRESS 170
+  # Allows outbound NTP traffic to all IPs
+  OutboundIpV4SshNetworkAclEntry:
+    Type: AWS::EC2::NetworkAclEntry
+    Properties:
+      CidrBlock: 0.0.0.0/0
+      Egress: true
+      NetworkAclId: !Ref PublicNetworkAcl
+      PortRange:
+        From: 22
+        To: 22
+      Protocol: 22 # TCP
+      RuleAction: allow
+      RuleNumber: 170
+  OutboundIpV6SshNetworkAclEntry:
+    Type: AWS::EC2::NetworkAclEntry
+    Properties:
+      Egress: true
+      Ipv6CidrBlock: ::/0
+      NetworkAclId: !Ref PublicNetworkAcl
+      PortRange:
+        From: 22
+        To: 22
+      Protocol: 22 # TCP
+      RuleAction: allow
+      RuleNumber: 171
 
 Outputs:
   NetworkAclName:
