Disable cfn-init package installs

--- a/stacks/shared-ecs-asg.yml
+++ b/stacks/shared-ecs-asg.yml
@@ -242,11 +242,11 @@ Resources:
       # is installed and run as part of the launch template's user data
       AWS::CloudFormation::Init:
         config:
-          packages:
-            yum:
-              aws-cli: []
-              bc: []
-              jq: []
+          # packages:
+          #   yum:
+          #     aws-cli: []
+          #     bc: []
+          #     jq: []
           files:
             /etc/cfn/cfn-hup.conf:
               # Create a configuration file for cfn-hup
