Add cfn-init command logging

--- a/stacks/shared-ecs-asg.yml
+++ b/stacks/shared-ecs-asg.yml
@@ -273,6 +273,8 @@ Resources:
               # https://docs.aws.amazon.com/AmazonECS/latest/developerguide/ecs-agent-config.html
               command: !Sub |
                 #!/bin/bash
+                echo "Configuring ECS container agent"
+                echo "Launching instance into cluster: ${EcsClusterName}"
                 echo ECS_CLUSTER=${EcsClusterName} >> /etc/ecs/ecs.config
           services:
             sysvinit:
