Turn on new Metrics stack

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -857,24 +857,24 @@ Resources:
       TimeoutInMinutes: 5
 
   # Temp
-  # MetricsV2Stack:
-  #   Type: AWS::CloudFormation::Stack
-  #   Condition: IsStaging
-  #   Properties:
-  #     Parameters:
-  #       AlbHttpsListenerArn: !GetAtt SharedAlbStack.Outputs.HttpsListenerArn
-  #       EcsClusterArn: !GetAtt SharedEcsClusterStack.Outputs.EcsClusterArn
-  #       VpcId: !GetAtt SharedVpcStack.Outputs.VpcId
-  #       SecretsBase:
-  #         Fn::ImportValue: !Sub ${SecretsStackName}-SecretsBaseRegion
-  #       MetricsEcrImageTag: !Ref MetricsEcrImageTag
-  #       MetricsSecretsVersion: !Ref MetricsSecretsVersion
-  #       EcrRegion: !Ref EcrRegion
-  #       SecretsStackName: !Ref SecretsStackName
-  #       EnvironmentType: !Ref EnvironmentType
-  #       EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, abbreviation]
-  #     TemplateURL: !Join ["", ["https://", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", !Sub ".s3.${AWS::Region}.amazonaws.com/${InfrastructureGitCommit}", "/stacks/container-apps/metrics-v2.yml"]]
-  #     TimeoutInMinutes: 5
+  MetricsV2Stack:
+    Type: AWS::CloudFormation::Stack
+    Condition: IsStaging
+    Properties:
+      Parameters:
+        AlbHttpsListenerArn: !GetAtt SharedAlbStack.Outputs.HttpsListenerArn
+        EcsClusterArn: !GetAtt SharedEcsClusterStack.Outputs.EcsClusterArn
+        VpcId: !GetAtt SharedVpcStack.Outputs.VpcId
+        SecretsBase:
+          Fn::ImportValue: !Sub ${SecretsStackName}-SecretsBaseRegion
+        MetricsEcrImageTag: !Ref MetricsEcrImageTag
+        MetricsSecretsVersion: !Ref MetricsSecretsVersion
+        EcrRegion: !Ref EcrRegion
+        SecretsStackName: !Ref SecretsStackName
+        EnvironmentType: !Ref EnvironmentType
+        EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, abbreviation]
+      TemplateURL: !Join ["", ["https://", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", !Sub ".s3.${AWS::Region}.amazonaws.com/${InfrastructureGitCommit}", "/stacks/container-apps/metrics-v2.yml"]]
+      TimeoutInMinutes: 5
 
 Outputs:
   VPCCertificateArn:
