--- a/stacks/vpc/public-network-acl.yml
+++ b/stacks/vpc/public-network-acl.yml
@@ -85,6 +85,7 @@ Resources:
   # Some of the ports in this range may be denied by other rules.
   # This assumes that the HTTP requests are originating from Linux host, and
   # use the common ephemeral port range for that operating system.
+  # These are also the dynamic ports used with ECS port mapping.
   # https://docs.aws.amazon.com/vpc/latest/userguide/vpc-network-acls.html#nacl-ephemeral-ports
   InboudIpV4TcpEphemeralPortsNetworkAclEntry:
     Type: AWS::EC2::NetworkAclEntry
