Fix description length

--- a/stacks/shared-alb.yml
+++ b/stacks/shared-alb.yml
@@ -132,11 +132,10 @@ Resources:
     Type: AWS::EC2::SecurityGroup
     Properties:
       GroupDescription: !Sub >-
-        Allows inbound traffic from all IPs on the ports configured for the
-        load balancer's listeners (HTTP and HTTPS), as well as outbound traffic
-        from the load balancer to EC2 instances in the target instance security
-        group on ports used for ECS dynamic port mapping, for the
-        ${EnvironmentType} shared ALB
+        Allows inbound traffic from all IPs on the load balancer's HTTP
+        listener ports, and outbound traffic from the load balancer to EC2
+        instances in the target instance security group on ECS dynamic port
+        mapping ports, for the ${EnvironmentType} shared ALB
       SecurityGroupEgress:
         - DestinationSecurityGroupId: !GetAtt TargetInstanceSecurityGroup.GroupId
           FromPort: 32768
