Remove invalid character

--- a/stacks/shared-alb.yml
+++ b/stacks/shared-alb.yml
@@ -132,7 +132,7 @@ Resources:
     Type: AWS::EC2::SecurityGroup
     Properties:
       GroupDescription: !Sub >-
-        Allows inbound traffic from all IPs on the load balancer's HTTP
+        Allows inbound traffic from all IPs on the load balancer HTTP
         listener ports, and outbound traffic from the load balancer to EC2
         instances in the target instance security group on ECS dynamic port
         mapping ports, for the ${EnvironmentType} shared ALB
