--- a/stacks/shared-vpc.yml
+++ b/stacks/shared-vpc.yml
@@ -3,7 +3,7 @@ AWSTemplateFormatVersion: "2010-09-09"
 
 Description: >-
   Creates a /16 VPC with private and public subnets in three availability
-  zones. The IPv4 CIDR block for each subnet have a /20 mask, which yields
+  zones. The IPv4 CIDR blocks for each subnet have a /20 mask, which yields
   4,096 hosts per subnet, and 16 possible /20 ranges within the /16 network.
   This provides enough room to create two complete sets of private and public
   subnets, allowing for updating the CIDR blocks of all subnet resources and
