--- a/stacks/shared-vpc.yml
+++ b/stacks/shared-vpc.yml
@@ -60,8 +60,7 @@ Resources:
     Properties:
       AssumeRolePolicyDocument:
         Statement:
-          - Action:
-              - sts:AssumeRole
+          - Action: sts:AssumeRole
             Condition:
               StringEquals:
                 "aws:PrincipalOrgID": !Ref AwsOrganizationId
@@ -73,11 +72,9 @@ Resources:
           PolicyDocument:
             Version: "2012-10-17"
             Statement:
-              - Action:
-                  - ec2:AcceptVpcPeeringConnection
+              - Action: ec2:AcceptVpcPeeringConnection
                 Effect: Allow
-                Resource:
-                  - "*"
+                Resource: "*"
       Tags:
         - Key: Project
           Value: platform.prx.org
