--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -862,6 +862,7 @@ Resources:
     Condition: IsStaging
     Properties:
       Parameters:
+        AlbFullName: !GetAtt SharedAlbStack.Outputs.AlbFullName
         AlbHttpsListenerArn: !GetAtt SharedAlbStack.Outputs.HttpsListenerArn
         EcsClusterArn: !GetAtt SharedEcsClusterStack.Outputs.EcsClusterArn
         VpcId: !GetAtt SharedVpcStack.Outputs.VpcId
@@ -871,6 +872,7 @@ Resources:
         MetricsSecretsVersion: !Ref MetricsSecretsVersion
         EcrRegion: !Ref EcrRegion
         SecretsStackName: !Ref SecretsStackName
+        NotificationsStackName: !Ref NotificationsStackName
         EnvironmentType: !Ref EnvironmentType
         EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, abbreviation]
       TemplateURL: !Join ["", ["https://", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", !Sub ".s3.${AWS::Region}.amazonaws.com/${InfrastructureGitCommit}", "/stacks/container-apps/metrics-v2.yml"]]
