Change alarm name

--- a/stacks/container-apps/metrics-v2.yml
+++ b/stacks/container-apps/metrics-v2.yml
@@ -84,7 +84,7 @@ Resources:
     Condition: IsProduction
     Properties:
       ActionsEnabled: true
-      AlarmName: "[Metrics][ALB][Error] Target 5XX"
+      AlarmName: "[Metrics v2][ALB][Error] Target 5XX"
       AlarmActions:
         - Fn::ImportValue: !Sub ${NotificationsStackName}-OpsErrorMessagesSnsTopicArn
       InsufficientDataActions:
