Rename shared VPC template directory

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -786,7 +786,7 @@ Resources:
         AwsOrganizationId: !Ref AwsOrganizationId
         AvailabilityZoneSelectorServiceToken: !GetAtt CustomResourcesStack.Outputs.AvailabilityZoneSelectorServiceToken
         EnvironmentType: !Ref EnvironmentType
-        TemplateUrlPrefix: !Join ["", ["https://", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", !Sub ".s3.${AWS::Region}.amazonaws.com/${InfrastructureGitCommit}", "/stacks/vpc"]]
+        TemplateUrlPrefix: !Join ["", ["https://", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", !Sub ".s3.${AWS::Region}.amazonaws.com/${InfrastructureGitCommit}", "/stacks/shared-vpc"]]
         CloudFormationNotificationArn:
           Fn::ImportValue: !Sub ${NotificationsStackName}-CloudFormationNotificationSnsTopic
       Tags:
