--- a/stacks/provisioned.yml
+++ b/stacks/provisioned.yml
@@ -17,6 +17,8 @@ Parameters:
   PublishSecretsVersion: { Type: String }
   MetricsEcrImageTag: { Type: String }
   MetricsSecretsVersion: { Type: String }
+  IframelyEcrImageTag: { Type: String }
+  IframelySecretsVersion: { Type: String }
   SecretsStackName: { Type: String }
   NotificationsStackName: { Type: String }
   UploadSigningUserName: { Type: String }
@@ -41,7 +43,7 @@ Resources:
         EnvironmentType: !Ref EnvironmentType
         EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
       TemplateURL: !Sub ${TemplateUrlPrefix}/metrics.yml
-      TimeoutInMinutes: 10
+      TimeoutInMinutes: 5
 
   PublishStack:
     Type: AWS::CloudFormation::Stack
@@ -63,4 +65,23 @@ Resources:
         UploadSigningEndpointUrl: !Ref UploadSigningEndpointUrl
         UploadSigningAccessKeyId: !Ref UploadSigningAccessKeyId
       TemplateURL: !Sub ${TemplateUrlPrefix}/publish.yml
-      TimeoutInMinutes: 10
+      TimeoutInMinutes: 20
+
+  IframelyStack:
+    Type: AWS::CloudFormation::Stack
+    Properties:
+      Parameters:
+        AlbFullName: !Ref AlbFullName
+        AlbHttpsListenerArn: !Ref AlbHttpsListenerArn
+        EcsClusterArn: !Ref EcsClusterArn
+        VpcId: !Ref VpcId
+        SecretsBase: !Ref SecretsBase
+        EcrImageTag: !Ref IframelyEcrImageTag
+        SecretsVersion: !Ref IframelySecretsVersion
+        EcrRegion: !Ref EcrRegion
+        SecretsStackName: !Ref SecretsStackName
+        NotificationsStackName: !Ref NotificationsStackName
+        EnvironmentType: !Ref EnvironmentType
+        EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
+      TemplateURL: !Sub ${TemplateUrlPrefix}/iframely.yml
+      TimeoutInMinutes: 5
