--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -810,6 +810,7 @@ Resources:
         VpcPublicSubnet1Id: !GetAtt SharedVpcStack.Outputs.PublicSubnet1Id
         VpcPublicSubnet2Id: !GetAtt SharedVpcStack.Outputs.PublicSubnet2Id
         VpcPublicSubnet3Id: !GetAtt SharedVpcStack.Outputs.PublicSubnet3Id
+        NotificationsStackName: !Ref NotificationsStackName
       Tags:
         - Key: prx:cloudformation:stack-name
           Value: !Ref AWS::StackName
@@ -867,6 +868,9 @@ Resources:
         MetricsEcrImageTag: !Ref MetricsEcrImageTag
         MetricsSecretsVersion: !Ref MetricsSecretsVersion
 
+        IframelyEcrImageTag: !Ref IframelyEcrImageTag
+        IframelySecretsVersion: !Ref IframelySecretsVersion
+
         TemplateUrlPrefix: !Join ["", ["https://", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", !Sub ".s3.${AWS::Region}.amazonaws.com/${InfrastructureGitCommit}", "/stacks/provisioned"]]
         AlbFullName: !GetAtt SharedAlbStack.Outputs.AlbFullName
         AlbHttpsListenerArn: !GetAtt SharedAlbStack.Outputs.HttpsListenerArn
@@ -883,7 +887,7 @@ Resources:
         UploadSigningEndpointUrl: !GetAtt ServerlessRootStack.Outputs.UploadSigningEndpointUrl
         UploadSigningAccessKeyId: !GetAtt ServerlessRootStack.Outputs.UploadSigningAccessKeyId
       TemplateURL: !Join ["", ["https://", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", !Sub ".s3.${AWS::Region}.amazonaws.com/${InfrastructureGitCommit}", "/stacks/provisioned.yml"]]
-      TimeoutInMinutes: 10
+      TimeoutInMinutes: 20
 
 Outputs:
   VPCCertificateArn:
