Add missing parameter

--- a/stacks/shared-alb.yml
+++ b/stacks/shared-alb.yml
@@ -69,6 +69,8 @@ Parameters:
     Type: AWS::EC2::Subnet::Id
   VpcPublicSubnet3Id:
     Type: AWS::EC2::Subnet::Id
+  NotificationsStackName:
+    Type: String
 
 Conditions:
   IsProduction: !Equals [!Ref EnvironmentType, Production]
