--- a/stacks/provisioned/metrics.yml
+++ b/stacks/provisioned/metrics.yml
@@ -16,7 +16,7 @@ Parameters:
   EcsClusterArn: { Type: String }
   EnvironmentType: { Type: String }
   EnvironmentTypeAbbreviation: { Type: String }
-  VpcId: { Type: AWS::EC2::VPC::Id }
+  VpcId: { Type: "AWS::EC2::VPC::Id" }
   SecretsBase: { Type: String }
   EcrRegion: { Type: String }
   MetricsEcrImageTag: { Type: String }
