Add new Play stack

--- a/stacks/provisioned.yml
+++ b/stacks/provisioned.yml
@@ -19,6 +19,8 @@ Parameters:
   MetricsSecretsVersion: { Type: String }
   IframelyEcrImageTag: { Type: String }
   IframelySecretsVersion: { Type: String }
+  PlayEcrImageTag: { Type: String }
+  PlaySecretsVersion: { Type: String }
   SecretsStackName: { Type: String }
   NotificationsStackName: { Type: String }
   UploadSigningUserName: { Type: String }
@@ -35,8 +37,8 @@ Resources:
         EcsClusterArn: !Ref EcsClusterArn
         VpcId: !Ref VpcId
         SecretsBase: !Ref SecretsBase
-        MetricsEcrImageTag: !Ref MetricsEcrImageTag
-        MetricsSecretsVersion: !Ref MetricsSecretsVersion
+        EcrImageTag: !Ref MetricsEcrImageTag
+        SecretsVersion: !Ref MetricsSecretsVersion
         EcrRegion: !Ref EcrRegion
         SecretsStackName: !Ref SecretsStackName
         NotificationsStackName: !Ref NotificationsStackName
@@ -54,8 +56,8 @@ Resources:
         EcsClusterArn: !Ref EcsClusterArn
         VpcId: !Ref VpcId
         SecretsBase: !Ref SecretsBase
-        PublishEcrImageTag: !Ref PublishEcrImageTag
-        PublishSecretsVersion: !Ref PublishSecretsVersion
+        EcrImageTag: !Ref PublishEcrImageTag
+        SecretsVersion: !Ref PublishSecretsVersion
         EcrRegion: !Ref EcrRegion
         SecretsStackName: !Ref SecretsStackName
         NotificationsStackName: !Ref NotificationsStackName
@@ -84,4 +86,23 @@ Resources:
         EnvironmentType: !Ref EnvironmentType
         EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
       TemplateURL: !Sub ${TemplateUrlPrefix}/iframely.yml
+      TimeoutInMinutes: 5
+
+  PlayStack:
+    Type: AWS::CloudFormation::Stack
+    Properties:
+      Parameters:
+        AlbFullName: !Ref AlbFullName
+        AlbHttpsListenerArn: !Ref AlbHttpsListenerArn
+        EcsClusterArn: !Ref EcsClusterArn
+        VpcId: !Ref VpcId
+        SecretsBase: !Ref SecretsBase
+        EcrImageTag: !Ref PlayEcrImageTag
+        SecretsVersion: !Ref PlaySecretsVersion
+        EcrRegion: !Ref EcrRegion
+        SecretsStackName: !Ref SecretsStackName
+        NotificationsStackName: !Ref NotificationsStackName
+        EnvironmentType: !Ref EnvironmentType
+        EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
+      TemplateURL: !Sub ${TemplateUrlPrefix}/play.yml
       TimeoutInMinutes: 5
