--- a/stacks/provisioned/metrics.yml
+++ b/stacks/provisioned/metrics.yml
@@ -19,8 +19,8 @@ Parameters:
   VpcId: { Type: "AWS::EC2::VPC::Id" }
   SecretsBase: { Type: String }
   EcrRegion: { Type: String }
-  MetricsEcrImageTag: { Type: String }
-  MetricsSecretsVersion: { Type: String }
+  EcrImageTag: { Type: String }
+  SecretsVersion: { Type: String }
   SecretsStackName: { Type: String }
   NotificationsStackName: { Type: String }
 
@@ -179,11 +179,11 @@ Resources:
             - Name: AWS_SECRETS_BASE
               Value: !Ref SecretsBase
             - Name: AWS_SECRETS_VERSION
-              Value: !Ref MetricsSecretsVersion
+              Value: !Ref SecretsVersion
             - Name: AWS_DEFAULT_REGION
               Value: !Ref AWS::Region
           Essential: true
-          Image: !Sub ${AWS::AccountId}.dkr.ecr.${EcrRegion}.amazonaws.com/metrics.prx.org:${MetricsEcrImageTag}
+          Image: !Sub ${AWS::AccountId}.dkr.ecr.${EcrRegion}.amazonaws.com/metrics.prx.org:${EcrImageTag}
           LogConfiguration:
             LogDriver: awslogs
             Options:
