--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -871,6 +871,9 @@ Resources:
         IframelyEcrImageTag: !Ref IframelyEcrImageTag
         IframelySecretsVersion: !Ref IframelySecretsVersion
 
+        PlayEcrImageTag: !Ref PlayEcrImageTag
+        PlaySecretsVersion: !Ref PlaySecretsVersion
+
         TemplateUrlPrefix: !Join ["", ["https://", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", !Sub ".s3.${AWS::Region}.amazonaws.com/${InfrastructureGitCommit}", "/stacks/provisioned"]]
         AlbFullName: !GetAtt SharedAlbStack.Outputs.AlbFullName
         AlbHttpsListenerArn: !GetAtt SharedAlbStack.Outputs.HttpsListenerArn
